address review feedback; change downloader to find matching data filename from its signature file when data file is compressed
Signed-off-by: Xin Li <xin.li@swirldslabs.com>